adding media queries

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
           <li>
             <ul id="social">
               <li><i class="fas fa-search" style="color: white;"></i></li>
-              <li><a href="http://www.youtube.com" target="_blank" id="yt"><i class="fab fa-youtube"></i></a></li>
-              <li><a href="http://www.twitter.com" target="_blank" id="tw"><i class="fab fa-twitter"></i></a></li>
-              <li><a href="http://www.instagram.com" target="_blank" id="pt"><i class="fab fa-instagram"></i></a></li>
-              <li><a href="http://www.facebook.com" target="_blank" id="fb"><i class="fab fa-facebook-square"></i></a></li>
-          </ul>
+          <li><a href="http://www.youtube.com" target="_blank" id="yt"><i class="fab fa-youtube"></i></a></li>
+          <li><a href="http://www.twitter.com" target="_blank" id="tw"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="http://www.instagram.com" target="_blank" id="pt"><i class="fab fa-instagram"></i></a></li>
+          <li><a href="http://www.facebook.com" target="_blank" id="fb"><i class="fab fa-facebook-square"></i></a></li>
+        </ul>
         </li>
 
         </ul>
@@ -67,7 +67,7 @@
           <span class="hero-tagline--sub">Wire</span>
           <span class="hero-tagline--sub">Design</span>
           <span class="hero-tagline--sub">Code</span>
-          </h3>
+        </h3>
       </div>
 
       <!-- Intro Paragraph -->
@@ -191,66 +191,69 @@
     <!-- team -->
     <section id="team">
       <h2>Our Team</h2>
+      <div id="team_members">
 
-      <div class="card-wrapper">
+        <div class="card-wrapper" id="team1">
 
-        <div class="card">
+          <div class="card">
 
-          <div class="card-image">
-            <img src="images/camillo_pic.jpg" alt="team profile one">
+            <div class="card-image">
+              <img src="images/camillo_pic.jpg" alt="team profile one">
+            </div>
+
+            <ul class="social-icons">
+              <li>
+                        <a href="https://www.linkedin.com/in/camillo-angelozzi-a0b5a229/" target="_blank">
+                          <i class="fab fa-linkedin-in"></i>
+                        </a>
+                      </li>
+              <li>
+                        <a href="https://github.com/cangelozzi">
+                          <i class="fab fa-github"></i>
+                        </a>
+                      </li>
+            </ul>
+
+            <div class="details">
+              <h3>Camillo Angelozzi
+                <br>
+                <span class="job-title">Web Developer</span>
+              </h3>
+            </div>
           </div>
+        </div><!-- end team member one -->
 
-          <ul class="social-icons">
-            <li>
-                <a href="https://www.linkedin.com/in/camillo-angelozzi-a0b5a229/" target="_blank">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
-            <li>
-                <a href="https://github.com/cangelozzi">
-                  <i class="fab fa-github"></i>
-                </a>
-              </li>
-          </ul>
+        <div class="card-wrapper" id="team2">
 
-          <div class="details">
-            <h3>Camillo Angelozzi
-              <br>
-              <span class="job-title">Web Developer</span>
-            </h3>
+          <div class="card">
+
+            <div class="card-image">
+              <img src="images/jeril_pic.jpg" alt="team profile two">
+            </div>
+
+            <ul class="social-icons">
+              <li>
+                                    <a href="https://www.linkedin.com/in/jeril-g-kadavan-ba350612a/" target="_blank">
+                                      <i class="fab fa-linkedin-in"></i>
+                                    </a>
+                                  </li>
+              <li>
+                                    <a href="https://github.com/jerilgkadavan">
+                                      <i class="fab fa-github"></i>
+                                    </a>
+                                  </li>
+            </ul>
+
+            <div class="details">
+              <h3>Jeril Kadavan
+                <br>
+                <span class="job-title">Web Designer</span>
+              </h3>
+            </div>
           </div>
-        </div>
-      </div><!-- end team member one -->
+        </div><!-- end team member two -->
+      </div>
 
-      <div class="card-wrapper">
-
-        <div class="card">
-
-          <div class="card-image">
-            <img src="images/jeril_pic.jpg" alt="team profile two">
-          </div>
-
-          <ul class="social-icons">
-            <li>
-                            <a href="https://www.linkedin.com/in/jeril-g-kadavan-ba350612a/" target="_blank">
-                              <i class="fab fa-linkedin-in"></i>
-                            </a>
-                          </li>
-            <li>
-                            <a href="https://github.com/jerilgkadavan">
-                              <i class="fab fa-github"></i>
-                            </a>
-                          </li>
-          </ul>
-
-          <div class="details">
-            <h3>Jeril Kadavan
-              <br>
-              <span class="job-title">Web Designer</span>
-            </h3>
-          </div>
-        </div>
-      </div><!-- end team member two -->
 
       <!-- FOOTER -->
       <footer id="footer">
